debug login and register pages

--- a/src/login.html
+++ b/src/login.html
@@ -54,19 +54,19 @@
 	<table>
 		<tr>
 			<td class = "each-icon">
-				<span class = "contact"><a href = "#"><img class = "icon" src = "../assets/images/facebook.png"></a></span>
+				<a href = "#" class = "contact"><i class="fab fa-facebook-f icon"></i></a>
 			</td>
 			<td class = "each-icon">
-				<span class = "contact"><a href = "#"><img class = "icon" src = "../assets/images/twitter.png"></a></span>
+				<a href = "#" class = "contact"><i class="fab fa-twitter icon"></i></a>
 			</td>
 			<td class = "each-icon">
-				<span class = "contact"><a href = "#"><img class = "icon" src = "../assets/images/instagram.png"></a></span>
+				<a href = "#" class = "contact"><i class="fab fa-instagram icon"></i></a>
 			</td>
 			<td class = "each-icon">
-				<span class = "contact"><a href = "#"><img class = "icon" src = "../assets/images/linkedin.png"></a></span>
+				<a href = "#" class = "contact"><i class="fab fa-linkedin icon"></i></a>
 			</td>
 			<td class = "each-icon">
-				<span class = "contact"><a href = "#"><img class = "icon" src = "../assets/images/mail.png"></a></span>
+				<a href = "#" class = "contact"><i class="fas fa-envelope icon"></i></a>
 			</td>
 		</tr>
 	</table>
