--- a/src/main.html
+++ b/src/main.html
@@ -25,8 +25,8 @@
     <!-- top page navigation -->
     <div class="navigation">
         <ul class="ul1">
-            <li><a href="#">ورود</a></li>
-            <li><a href="#">عضویت</a></li>
+            <li><a href="login.html">ورود</a></li>
+            <li><a href="register.html">عضویت</a></li>
         </ul>
         <ul class="ul2">
             <li><a href="#">راهنما</a></li>
@@ -505,11 +505,11 @@
 <div class="footer2">
      <p >© 2017, Reyhoon, All Rights Reserved.</p>
                 <div class="brands_grid">
-                        <i class="fab fa-telegram-plane fa-2x"></i>
-                        <i class="fab fa-facebook-f fa-2x brand"></i>
-                        <i class="fab fa-twitter fa-2x brand"></i>
-                        <i class="fab fa-instagram fa-2x brand"></i>
-                        <i class="fab fa-google-plus-g fa-2x brand"></i>      
+                        <a href="#"><i class="fab fa-telegram-plane fa-2x"></i></a>
+                        <a href="#"><i class="fab fa-facebook-f fa-2x brand"></i></a>
+                        <a href="#"><i class="fab fa-twitter fa-2x brand"></i></a>
+                        <a href="#"><i class="fab fa-instagram fa-2x brand"></i></a>
+                        <a href="#"><i class="fab fa-google-plus-g fa-2x brand"></i></a>      
                 </div>
                
     
