--- a/src/register.html
+++ b/src/register.html
@@ -23,7 +23,7 @@
 
 <body>
 	<div id = "title">
-		<img  id ="ReyhoonLogo" src="../assets/images/reyhoon.png" alt="reyhoon" height="40" width="130"/>
+		<a href="main.html"><img  id ="ReyhoonLogo" src="../assets/images/reyhoon.png" alt="reyhoon" height="40" width="130"/></a>
 	</div>
 	<div id = "login-register">
 		<div id = "login">
