--- a/src/main.html
+++ b/src/main.html
@@ -248,7 +248,7 @@
                 <p class="grid_header">  رستوران‌های خوب در تهران</p>
                 <!-- <div class="l-wrap"> -->
                         <div class="best_restuarnats_grid">
-                            <a href="#"><div class="restItem">
+                            <a class="restItem_p" href="#"><div class="restItem">
                                 <img src="../assets/images/op1.jpeg"/>
                                 <p>ویترین</p>
                             </div></a>
