--- a/src/main.html
+++ b/src/main.html
@@ -5,12 +5,14 @@
 	<title>سفارش آنلاین غذا از بهترین رستوران‌ها و فست فودها | ریحون
 	</title>
 	 
-      
+            <script type="text/javascript" src ="../script/jquery-3.1.0.js"></script>
+          <script type="text/javascript" src ="../script/script.js"></script>
+
+ 
         <link rel="stylesheet" href="../assets/css/global.css">
         <link rel="stylesheet" href="../assets/css/main.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
         <link href="https://cdn.rawgit.com/rastikerdar/shabnam-font/v4.0.0/dist/font-face.css" rel="stylesheet" type="text/css" />
-        <link rel="stylesheet" href="../assets/css/star.css">
 
 	<meta name="copyright" content="ریحون">
 	<meta name="twitter:title" content="ریحون">
@@ -25,8 +27,8 @@
     <!-- top page navigation -->
     <div class="navigation">
         <ul class="ul1">
-            <li><a href="login.html">ورود</a></li>
-            <li><a href="register.html">عضویت</a></li>
+            <li><a href="login.html" onclick="register2log();">ورود</a></li>
+            <li><a href="login.html" onclick="login2register();">عضویت</a></li>
         </ul>
         <ul class="ul2">
             <li><a href="#">راهنما</a></li>
@@ -189,12 +191,13 @@
                                         <div class="gs"><pre>3.5</pre></div>
                                         <div class="rate">
                                                 <input type="radio" id="star1" name="rate" value="5"/>
+                                                <!-- <i id = "star1" class="fa fa-star full-star"></i>  -->
                                                 <label for="star5" title="text"  >5 stars</label>
-                                                <input type="radio" id="star1" name="rate" value="4" checked="true" />
+                                                <input type="radio" id="star4" name="rate" value="4" checked="true" />
                                                 <label for="star4" title="text">4 stars</label>
-                                                <input type="radio" id="star1" name="rate" value="3" />
+                                                <input type="radio" id="star3" name="rate" value="3" />
                                                 <label for="star3" title="text" >3 stars</label>
-                                                <input type="radio" id="star1" name="rate" value="2"/>
+                                                <input type="radio" id="star2" name="rate" value="2"/>
                                                 <label for="star2" title="text">2 stars</label>
                                                 <input type="radio" id="star1" name="rate" value="1"/>
                                                 <label for="star1" title="text">1 star</label>
@@ -217,13 +220,13 @@
                                             <div class="ls"><pre>           </pre></div>
                                             <div class="gs"><pre>3.8</pre></div>
                                             <div class="rate">
-                                                    <input type="radio" id="star1" name="rate" value="5"/>
+                                                    <input type="radio" id="star5" name="rate" value="5"/>
                                                     <label for="star5" title="text"  >5 stars</label>
-                                                    <input type="radio" id="star1" name="rate" value="4" />
+                                                    <input type="radio" id="star4" name="rate" value="4" />
                                                     <label for="star4" title="text">4 stars</label>
-                                                    <input type="radio" id="star1" name="rate" value="3" checked="true" / >
+                                                    <input type="radio" id="star3" name="rate" value="3" checked="true" / >
                                                     <label for="star3" title="text" >3 stars</label>
-                                                    <input type="radio" id="star1" name="rate" value="2"/>
+                                                    <input type="radio" id="star2" name="rate" value="2"/>
                                                     <label for="star2" title="text">2 stars</label>
                                                     <input type="radio" id="star1" name="rate" value="1" checked="true" />
                                                     <label for="star1" title="text">1 star</label>
@@ -248,7 +251,7 @@
                 <p class="grid_header">  رستوران‌های خوب در تهران</p>
                 <!-- <div class="l-wrap"> -->
                         <div class="best_restuarnats_grid">
-                            <a class="restItem_p" href="#"><div class="restItem">
+<!--                             <a class="restItem_p" href="#"><div class="restItem">
                                 <img src="../assets/images/op1.jpeg"/>
                                 <p>ویترین</p>
                             </div></a>
@@ -295,7 +298,7 @@
                             <a href="#"><div class="restItem">
                                 <img src="../assets/images/op12.jpeg"/>
                                 <p>شرین پلو</p>
-                            </div></a>
+                            </div></a> -->
                       </div>
                 <!-- </div> -->
 
@@ -307,7 +310,7 @@
                 <h1>غذا چی میل دارید؟</h1>
                 <p>صبحانه، ناهار، شام یا هر چیزی که میل دارید را انتخاب کنید</p>
                 <div class="foods_grid">
-                  <a href="#">  <div class="foodItem">
+                 <!--  <a href="#">  <div class="foodItem">
                         <img src="../assets/images/f1.jpeg"/>
                         <p class="p1">
                             ساندویچ
@@ -342,7 +345,7 @@
                         <p class="p2">
                             ۱۸۳۶‌رستوران‌فعال
                         </p>
-                    </div></a>
+                    </div></a> -->
 
                 </div>
 
@@ -355,7 +358,7 @@
                 <p class="p4">انتخاب غذا‌های بیشتر</p4>
             </div >
             <div class="more_foods_grid">
-                    <div  class="item">
+<!--                     <div  class="item">
                        <a href="#" class="foodButton">
                            خورشت
                        </a>
@@ -436,7 +439,7 @@
                            آبمیوه طبیعی
                        </a>
                     </div>
-
+ -->
             </div>
 
 <!-- footer -->
