--- a/src/register.html
+++ b/src/register.html
@@ -8,6 +8,8 @@
       
         <link rel="stylesheet" href="../assets/css/global.css">
         <link rel="stylesheet" href="../assets/css/register.css">
+        <script type="text/javascript" src ="../script/jquery-3.1.0.js"></script>
+          <script type="text/javascript" src ="../script/script.js"></script>
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
    <link href="https://cdn.rawgit.com/rastikerdar/shabnam-font/v4.0.0/dist/font-face.css" rel="stylesheet" type="text/css" />
 
@@ -15,7 +17,6 @@
 	<meta name="twitter:title" content="ریحون">
 	<meta name="twitter:card" content="summary">
 	<meta property="og:type" content="website">
-            <link rel="stylesheet" href="../assets/css/star.css">
 
 	<meta name="description" content="ریحون سریعترین راه سفارش آنلاین غذا است. منو عکس دار رستوران ها و فست فودهای اطرافتان را به صورت اینترتنی مشاهده کنید و غذایتان را به صورت شبانه روزی سفارش دهید">
 
@@ -27,13 +28,15 @@
 	</div>
 	<div id = "login-register">
 		<div id = "login">
-			<a class = "link" href = "./login.html"><img id ="loginLogo" src="../assets/images/login.png"/>ورود</a>
+			<a class = "link" onclick="register2log()"><img id ="loginLogo" src="../assets/images/login.png"/>ورود</a>
 		</div>
 		<div id = "register">
 			<img id ="registerLogo" src="../assets/images/register-pink.png"/>ثبت ‌نام
 
 	</div>
-	<div id = "inputs">
+
+	<div class="register_div">
+	<div id = "inputs_reg" >
 		<p class = "p1"> ثبت نام </p>
 		<p class = "p1"> از اینکه داری به جمع ریحونیا می‌پیوندی خیلی خوشحالیم </p>
 		<div  class = "input-border">
@@ -54,6 +57,7 @@
 				</div>
 			</span>
 		</div>
+
 		<div class = "input-border">
 			<img id = "keyLogo" src="../assets/images/key.png"/>
 			<input id = "password" placeholder = "رمز عبور">
@@ -65,6 +69,8 @@
 			
 		</div>
 		<div><button type="submit" id = "login-button">ثبت‌نام</button></div>
+	</div>
+
 	</div>
 	<div id = "icons">
 	<table>
